<resources>
    <string name="app_name">Parcial_Picon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="t1Splash">TravelApp</string>
    <string name="splashtx2">Tu compañero ideal para planificar y disfrutar de tus viajes. Con TravelApp, podras explorar destinos emocionantes, organizar itinerarios de alojamiento y actividades, todo desde la palma de tu mano. Ya sea que estes planeado unas vacaciones soñadas o un viaje de último minuto. TravelApp esta aqui para hacer que tu experiencia sea facil, eficiente y memorable. ¡Empieza a explorar el mundo con nosotros hoy mismo!</string>
    <string name="btnstarted">GET STARTED</string>
    <string name="sigtxt">Sign In</string>
    <string name="btnlogintxt">Sign In</string>
    <string name="txtemail">Email</string>
    <string name="txtpassd">Password</string>
    <string name="menPre">Presupuesto</string>
    <string name="menSeg">Seguros</string>
    <string name="menHotel">Hoteles</string>
    <string name="menPre2">Presupuesto</string>
</resources>